# distributed-perimeter-surveillance

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
config/: system_deterministic.json  system_nominal.json  system_stress.json
diagrams/: sequence_event_flow.puml  system_architecture.puml
docs/: Architecture.md  ICD.md  SRS.md  Test_Procedures.md  Traceability.md  VnV_Plan.md
docs/Test_Reports/: TC-DET-001.md  TC-FT-001.md  TC-LAT-001.md
scripts/: run_cluster.sh
src/central_processor/: central_processor.cpp  central_processor.hpp  main.cpp
src/common/: config.cpp  config.hpp  ids.hpp  json_utils.hpp  logging.cpp  logging.hpp  metrics.cpp  metrics.hpp  time.cpp  time.hpp  zmq_utils.cpp  zmq_utils.hpp
src/network_emulator/: main.cpp  network_emulator.cpp  network_emulator.hpp
src/operator_ui/: main.cpp  ui_server.cpp  ui_server.hpp
src/operator_ui/static/: app.js  index.html  styles.css
src/sensor_node/: main.cpp  sensor_node.cpp  sensor_node.hpp
tests/: CMakeLists.txt  test_determinism.cpp  test_fault_tolerance.cpp  test_latency.cpp  test_logging.cpp
tests/support/: log_parse.cpp  log_parse.hpp  proc.hpp  proc_linux.cpp  proc_windows.cpp
